--- a/app/src/main/res/layout/activity_main_back.xml
+++ b/app/src/main/res/layout/activity_main_back.xml
@@ -12,9 +12,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Reset"
-        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
-        app:layout_constraintEnd_toEndOf="@+id/btnCalculate"
-        app:layout_constraintStart_toStartOf="@+id/btnCalculate" />
+        app:layout_constraintBottom_toTopOf="@+id/btnEmpty"
+        app:layout_constraintEnd_toEndOf="@+id/btnEmpty"
+        app:layout_constraintStart_toStartOf="@+id/btnEmpty" />
 
     <TextView
         android:id="@+id/tvAmount"
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="@+id/bill_view" />
 
     <TextView
-        android:id="@+id/tvTotal"
+        android:id="@+id/x"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -93,7 +93,7 @@
         app:layout_constraintTop_toBottomOf="@+id/bill_view_et" />
 
     <TextView
-        android:id="@+id/tv_tip_amount"
+        android:id="@+id/tv_total_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="$0.0"
@@ -102,13 +102,13 @@
         app:layout_constraintStart_toStartOf="@+id/sb_Tip" />
 
     <TextView
-        android:id="@+id/tv_total_amount"
+        android:id="@+id/tv_tip_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="$0.0"
         android:textSize="22sp"
-        app:layout_constraintBaseline_toBaselineOf="@id/tvTotal"
-        app:layout_constraintStart_toStartOf="@+id/tv_tip_amount" />
+        app:layout_constraintBaseline_toBaselineOf="@id/x"
+        app:layout_constraintStart_toStartOf="@+id/tv_total_amount" />
 
     <TextView
         android:id="@+id/NoPersons"
@@ -118,8 +118,8 @@
         android:text="No of People"
         android:textSize="18sp"
 
-        app:layout_constraintEnd_toEndOf="@+id/tvTotal"
-        app:layout_constraintTop_toBottomOf="@+id/tvTotal" />
+        app:layout_constraintEnd_toEndOf="@+id/x"
+        app:layout_constraintTop_toBottomOf="@+id/x" />
 
     <TextView
         android:id="@+id/tvSplitAmount"
@@ -142,7 +142,7 @@
         app:layout_constraintStart_toStartOf="@+id/removeperson" />
 
     <Button
-        android:id="@+id/btnCalculate"
+        android:id="@+id/btnEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calculate"
@@ -158,7 +158,7 @@
         android:text="-"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/NoPeople"
-        app:layout_constraintStart_toStartOf="@+id/tv_total_amount"
+        app:layout_constraintStart_toStartOf="@+id/tv_tip_amount"
         app:layout_constraintTop_toTopOf="@+id/NoPeople" />
 
     <Button
