--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FFFFFF</color>
-    <color name="keypad_color">#000000</color>
+    <color name="keypad_color">#00FFEA</color>
     <color name="background">#000000</color>
     <color name="thumbColor">#FF0400</color>
-    <color name="keypad_text_color">#26FF00</color>
+    <color name="keypad_text_color">#000000</color>
+    <color name="highlight_color">#DAF7A5</color>
 </resources>
