2nd update rectified errors java

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -248,9 +248,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#F2B258"
+        android:maxLines="1"
         android:text="@string/calculate_str"
         app:autoSizeMaxTextSize="17sp"
-        app:autoSizeMinTextSize="8sp"
+        app:autoSizeMinTextSize="1sp"
         app:autoSizeStepGranularity="2sp"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="@+id/b6"
@@ -512,9 +513,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#F2B258"
+        android:maxLines="1"
+        android:singleLine="false"
         android:text="@string/backspace_str"
-        app:autoSizeMaxTextSize="17sp"
-        app:autoSizeMinTextSize="8sp"
+        app:autoSizeMaxTextSize="15sp"
+        app:autoSizeMinTextSize="1sp"
         app:autoSizeStepGranularity="2sp"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="@+id/b3"
@@ -527,9 +530,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#F2B258"
+        android:maxLines="1"
+        android:singleLine="false"
         android:text="@string/reset_str"
-        app:autoSizeMaxTextSize="17sp"
-        app:autoSizeMinTextSize="8sp"
+        app:autoSizeMaxTextSize="15sp"
+        app:autoSizeMinTextSize="1sp"
         app:autoSizeStepGranularity="2sp"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="@+id/b9"
